[project]
name = "pysesd"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Xiangzhuang Shen", email = "datahonor@gmail.com" }
]
dependencies = ["numpy~=1.24.3", "scipy~=1.10.1", "matplotlib~=3.7.1", "pandas~=2.0.2", "statsmodels~=0.14.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools~=67.8.0",
    "ipython>=8.12.2",
]
[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
